--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,13 @@
   font-size: 30px;
   text-align: left;
 }
+
+.home-image {
+  width: 100px;
+  height: auto;
+}
+
+.main-image {
+  height: 310px;
+  width: auto;
+}
